--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,9 +1,10 @@
 /Article.class
 /Book.class
+/Collection$1.class
 /Collection.class
 /Magazine.class
+/Main.class
 /Novel.class
 /Poem.class
 /Work.class
-/Main.class
-/Collection$1.class
+/Main$1.class
