--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,10 +1,10 @@
-/Article.class
-/Book.class
 /Collection$1.class
 /Collection.class
 /Magazine.class
+/Main$1.class
 /Main.class
 /Novel.class
 /Poem.class
 /Work.class
-/Main$1.class
+/Collection$2.class
+/Collection$3.class
